--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ rand_chacha = "0.9.0"
 serde = { version = "1.0.219", features = ["derive"] }
 sha256 = "1.6.0"
 tokio = { version = "1.44.1", features = ["full"] }
+tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
 xdg = "2.5.2"
