--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-actix-web = "4.10.2"
-anyhow = "1.0.97"
-rand = "0.9.0"
-rand_chacha = "0.9.0"
-serde = { version = "1.0.219", features = ["derive"] }
-sha256 = "1.6.0"
-tokio = { version = "1.44.1", features = ["full"] }
+thiserror = "2.0.12"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
-xdg = "2.5.2"
