--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ authors = ["Silvan Schmidt <mail@silvanschmidt.ch>"]
 [dependencies]
 dotenvy = "0.15.7"
 serde = { version = "1.0.219", features = ["derive"] }
+sha256 = "1.6.0"
 thiserror = "2.0.12"
 toml = "0.8.20"
 tracing = "0.1.41"
