--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,12 @@ authors = ["Silvan Schmidt <mail@silvanschmidt.ch>"]
 
 
 [dependencies]
+actix-web = "4.10.2"
 dotenvy = "0.15.7"
 serde = { version = "1.0.219", features = ["derive"] }
 sha256 = "1.6.0"
 thiserror = "2.0.12"
+tokio = { version = "1.44.1", features = ["full"] }
 toml = "0.8.20"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
