--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ authors = ["Silvan Schmidt <mail@silvanschmidt.ch>"]
 [dependencies]
 actix-web = "4.10.2"
 dotenvy = "0.15.7"
+rand = "0.9.0"
+rand_chacha = "0.9.0"
 serde = { version = "1.0.219", features = ["derive"] }
 sha256 = "1.6.0"
 thiserror = "2.0.12"
