feat: configure default docker-compose.yml to use prebuilt image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,10 @@
 services:
     mural_server:
+        image: ghcr.io/mural-sync/mural-server
         container_name: mural_server
-        build:
-            context: ./
-            dockerfile: ./Dockerfile
         ports:
             - 46666:46666
         volumes:
-            - ./mural_server_config:/config
+            - ./config:/config
         environment:
             - MURAL_SERVER_CONFIG_HOME=/config
