--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "mural-server"
 version = "0.2.1"
 edition = "2024"
 authors = ["Silvan Schmidt <mail@silvanschmidt.ch>"]
+description = "Server software for the mural wallpaper service"
+license = "MIT"
+license-file = "LICENSE"
+repository = "https://github.com/mural-sync/mural-server"
 
 
 [dependencies]
