fix: correct syntax

--- a/.github/workflows/musl-build.yml
+++ b/.github/workflows/musl-build.yml
@@ -1,4 +1,4 @@
-name: Create release
+name: Build for musl
 
 on:
   workflow_dispatch:
@@ -40,7 +40,7 @@ jobs:
           target: ${{ matrix.target }}
 
       - name: Install musl dependencies
-        if: matrix.target == "x86_64-unknown-linux-musl"
+        if: matrix.target == 'x86_64-unknown-linux-musl'
         run: |
           sudo apt-get update
           sudo apt-get install -y musl-tools
