--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,7 +4,6 @@ on:
   push:
     tags:
       - "*"
-  workflow_dispatch:
 
 jobs:
   define-matrix:
@@ -18,7 +17,7 @@ jobs:
       - name: Define the target matrix
         id: targets
         run: |
-          echo 'targets=["x86_64-unknown-linux-gnu"]' >> "$GITHUB_OUTPUT"
+          echo 'targets=["x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl"]' >> "$GITHUB_OUTPUT"
 
   publish:
     name: Publish to crates.io
@@ -90,6 +89,12 @@ jobs:
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           target: ${{ matrix.target }}
+
+      - name: Install musl dependencies
+        if: matrix.target == 'x86_64-unknown-linux-musl'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y musl-tools
 
       - name: Build
         run: |
